assets/css/style.css
/* @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@300&display=swap'); */
@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@300&family=Ubuntu&display=swap");

* {
  margin: 0;
  padding: 0;
  border: none;
}

body {
  font-family: Lato, sans-serif;
  /* font-family: 'Roboto', sans-serif; */
  /* font-family: 'Roboto Condensed', sans-serif; */
  font-family: "Ubuntu", sans-serif;
  font-weight: 300;
  color: #4c4c4c;
}

header {
  position: fixed;
  top: 0;
  z-index: 9999;
  overflow: hidden;
  background-color: white;
  width: 100%;
}

/* Main Title and banner  */
h1,
h2 {
  font-family: "Roboto", sans-serif;
  /* font-family: 'Ubuntu', sans-serif; */
  letter-spacing: 3px;
  text-transform: uppercase;
  color: #252525;
}

#title {
  float: left;
  font-size: 260%;
  margin-left: 20px;
  line-height: 60px;
}

/* Navigation menu bar */
#menu-bar {
  float: right;
  font-size: 100%;
  letter-spacing: 3px;
}

#menu-bar li {
  float: left;
  margin-right: 20px;
  list-style-type: none;
  line-height: 60px;
}

#menu-bar a:hover,
.footer-menu a:hover {
  border-top: 1px solid #252525;
  border-bottom: 1px solid #252525;
}

#menu-bar a {
  text-decoration: none;
  color: #252525;
}

main {
  display: flex;
  flex-direction: column;
}
/* Underline the current page link on the menu bar */
.selected {
  /* text-decoration: underline solid; */
  border-bottom: 1px solid #252525;
  padding-bottom: 2px;
}

/* Banner image */
#banner-section {
  height: 55vh;
  width: 100%;
  position: relative;
  /* clear: both; */
  overflow: hidden;
}

#banner-image {
  height: 100%;
  width: 100%;
  object-fit: cover;
  animation-name: zoom-banner;
  animation-duration: 5s;
  animation-fill-mode: both;
}

/* Add animation to the banner */
@keyframes zoom-banner {
  from {
    transform: scale(0.9);
  }

  to {
    transform: scale(1);
  }
}

/* Add brief description of the banner on banner text */
#banner-text {

  font-family: "Roboto", sans-serif;
  text-transform: uppercase;
  letter-spacing: 3px;
  text-align: center;
  width: 70%;
  height: 4rem;
  padding-top: 20px;
  padding-left: 10px;
  background-color: rgba(52, 42, 192, 0.7);
  bottom: 6rem;
  position: relative;
  border-radius: 10%;
  margin: 0 auto;
}

#banner-text>h2 {
  color: #ffffff;
  font-size: 120%;
  margin: 0 auto;
}

/* Section for the history text of yams */
#yam-intro {
  /* clear: both; */
  width: 70%;
  margin: 0 auto;
  padding-top: 1rem;
  /* float: left; */
  /* padding: 30px; */
  text-align: center;
  box-sizing: border-box;
}

.full-line {
  border-top: 1px solid #252525;
  width: 100%;
  margin: 3px 0;
}

/* Format of the text on the paragraphs */
.text-div p {
  padding-top: 10px;
  /* text-align: justify; */
  line-height: 25px;
}

/* some breathing space between the text and the image gallery */
.text-div {
  padding-top: 10px;
  text-align: justify;
}
.text-div>h2{
  text-align: center;
}

/* Image gallery of yam festivals */
.image-gallery {
  width: 80%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
}

.image {
  display: flex;
  /* flex-wrap: wrap; */
  width: 33%;
  flex-direction: column;
  box-sizing: border-box;
  padding-top: 1rem;
  margin: 0 auto;
  text-align: center;
  padding:  1rem;
}

section > h2 {
  width: 100%;
  margin: 1rem 0 auto;
  text-align: center;
}

/* display 2 columns of images each with 48% width with some 6px spaceing */
/* .image-column {
  flex: 48%;
  max-width: 48%;
  padding: 0 6px;
}

.image-column img {
  margin-top: 1rem;
  vertical-align: middle;
  width: 100%;
} */

.image-intro-line {
  width: 20%;
  /* border-top: 2px solid #252525; */
  margin:  0 auto;
  padding-bottom: 1rem;
}

/* same line height with the other text at the left of the page */
.image-column p {
  line-height: 25px;
}

/* Festivals SEction with videos */
#festival-section, #igbo-section {
  width: 80%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
}


.videoitem , .igbo-item {
  display: flex;
  width: 48%;
  flex-direction: column;
  box-sizing: border-box;
  padding-top: 1rem;
  margin: 0 auto;
  text-align: center;
  padding:  1rem;
}


iframe {
  width: auto;
  height: 20rem;
}
/* footer */
footer {
  text-align: center;
  width: 100%;
  overflow: hidden;
  font-size: 1rem;
  padding: 0.5% 1% 0.5 1%;
  border-top: 2px solid #252525;
  margin-top: 15px;
}

.footer-menu span a {
  margin: 10px 20px 20px 0;
  text-decoration: none;
  color: #252525;
  letter-spacing: 3px;
}

.footer-menu {
  margin: 10px 0 10px 0;
}

.contact-us span {
  margin-top: 10px 0;
}

.contact-us span a {
  margin: 0 30px 5px 30px;
  color: #252525;
  font-size: 150%;
}


/* Media queries 

 For larger to medium screens size from 859px width and down. The point that our 2 panel image reduces  to 2 */

@media screen and (max-width: 1050px) {
  .image-gallery {
    width: 80%;
  }
  .image {
    width: 50%;
    height:auto;
  }

  #yam-intro {
    width: 80%;
  }

   /* reduce our sub title text to be in line with reduced screen  */
  h1,
  h2 {
    font-size: 100%;
  }
  /* force to a single column stacking */
  .videoitem, .igbo-item {
    width: 80%;
    height: auto;
  }
  iframe {
    height: 15rem;
  }
}


 /* For screens from 780px and below. The point that our navigation menu gets distorted. We
shift the menu to the left. ALso change our image gallery to single column  */

@media screen and (max-width: 780px) {
  #menu-bar {
    float: left;
    /* align with the page title  */
    margin-left: 20px;
  }

  .image-gallery {
    width: 70%;
    margin: 0 auto;
    flex-wrap: nowrap;
    flex-direction: column;
  }
  .image {
    width: 90%;
    height: auto;
  }
  .image-intro-line {
    border-top: 2px solid #252525;
  }

}

